Fix invisible option menu colors.
Since "color" was set to white, the dropdowns that are created in the ransack gem take on the white foreground and already have a white background. The solution is to explicitly set the foreground color to black.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+select {
+  color: black;
+}
+
+value {
+  color: black;
+}
+
 body {
   padding-top: 60px;
   background-color: #7f1a1a;
